# ghola

./: .dockerignore  .gitignore  .gitmodules  .vercelignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  Dockerfile  Dockerfile.cloud  Dockerfile.gateway  Dockerfile.relay  Dockerfile.thumper  INVESTOR_MEMO.md  Makefile.hardening  PRIVACY.md  README.md  SECURITY.md  SOLANA.md  STATUS.md  clippy.toml  config.example.toml  deny.toml  fly.thumper-cloud.toml  render.yaml
cli/: Cargo.toml
cli/src/: main.rs
crates/chaos-tests/: Cargo.toml
crates/chaos-tests/src/: harness.rs  lib.rs  scenarios.rs
crates/chaos-tests/tests/: partial_settlement.rs  prover_outage.rs  queue_backlog.rs  rpc_flap.rs  sled_blocking.rs  snarkjs_timeout.rs  stale_indexer.rs
crates/common-log/: Cargo.toml
crates/common-log/src/: fields.rs  lib.rs  redact.rs
crates/common-log/tests/: leak_test.rs
crates/common-secrets/: Cargo.toml
crates/common-secrets/src/: lib.rs  scrubbed.rs
crates/common-secrets/tests/: zeroize_audit.rs
crates/ghola-cli/: Cargo.toml
crates/ghola-cli/src/: main.rs
crates/ghola-cloud/: Cargo.toml
crates/ghola-cloud/src/: auth.rs  config.rs  lib.rs  main.rs  middleware.rs
crates/ghola-cloud/src/routes/: accounts.rs  auth.rs  calls.rs  chat.rs  commerce.rs  devices.rs  did_snapshot.rs  handshake.rs  llm.rs  mod.rs  openai_compat.rs  swarm.rs  tasks.rs  templates.rs  user.rs  wallet.rs  x402.rs
crates/ghola-cloud/src/services/: call_service.rs  commerce_service.rs  mod.rs  proactive.rs  seeker_service.rs  task_engine.rs  telegram.rs  x402_service.rs
crates/ghola-gateway/: Cargo.toml
crates/ghola-gateway/src/: auth_inject.rs  config.rs  discovery.rs  ip_rate_limit.rs  main.rs  meter.rs  proxy.rs  route_cache.rs  state.rs  x402_challenge.rs  x402_verify.rs
crates/ghola-home/: Cargo.toml
crates/ghola-home/src/: auth.rs  config.rs  db.rs  error.rs  llm.rs  main.rs  ollama.rs  state.rs
crates/ghola-home/src/routes/: chat.rs  health.rs  mod.rs  models.rs  pair.rs  settings.rs
crates/ghola-mcp/: Cargo.toml
crates/ghola-mcp/examples/: list_apps.rs
crates/ghola-mcp/flows/: check_balance.yaml  open_dapp_store.yaml  search_web.yaml  send_token.yaml
crates/ghola-mcp/src/: config.rs  connection.rs  flows.rs  lib.rs  main.rs  memory.rs
crates/ghola-mcp/src/tools/: intelligence.rs  phase1.rs  phase2a.rs  phase2b.rs  phase2cd.rs
crates/ghola-shielded-pool-mobile-backend/: Cargo.toml
crates/ghola-shielded-pool-mobile-backend/src/: lib.rs
crates/ghola-zkml-types/: Cargo.toml
crates/ghola-zkml-types/src/: lib.rs
crates/malicious-tests/: Cargo.toml
crates/malicious-tests/src/: actors.rs  lib.rs  log_capture.rs  mock_submit.rs
crates/malicious-tests/tests/: malicious_app.rs  malicious_forester.rs  malicious_governance.rs  malicious_griefing.rs  malicious_prover.rs  malicious_relayer.rs  malicious_worker.rs
crates/malicious-tests/tests/common/: mod.rs
crates/said-attest/: Cargo.toml
crates/said-attest/src/: allowlist.rs  h100.rs  kms.rs  lib.rs  nitro.rs  tdx.rs  types.rs
crates/said-attest/tests/: integration.rs
crates/said-bbs-types/: Cargo.toml
crates/said-bbs-types/src/: lib.rs
crates/said-cloud/: Cargo.toml
crates/said-cloud/src/: auth.rs  config.rs  db.rs  error.rs  health_checker.rs  helius.rs  ip_rate_limit.rs  main.rs  metered.rs  self_register.rs  signing.rs  state.rs
crates/said-cloud/src/routes/: agents.rs  analytics.rs  audit.rs  (+23 more)
crates/said-core/: Cargo.toml
crates/said-core/src/: audit.rs  context.rs  discovery.rs  encrypt.rs  error.rs  lib.rs  mesh.rs  session.rs  storage.rs  ucan.rs  wallet.rs
crates/said-envelope/: Cargo.toml
crates/said-envelope/examples/: gen_streaming_vectors.rs  gen_vectors.rs
crates/said-envelope/src/: lib.rs  streaming.rs
crates/said-noncecache/: Cargo.toml
crates/said-noncecache/src/: lib.rs
crates/said-pir-types/: Cargo.toml
crates/said-pir-types/src/: lib.rs
crates/said-receipts-service/: Cargo.toml
crates/said-receipts-service/src/: batch.rs  lib.rs  main.rs  merkle.rs  receipt.rs  routes.rs  solana.rs  storage.rs  tests.rs
crates/said-receipts-service/tests/: integration.rs
crates/said-shielded-pool-client/: Cargo.toml  README.md
crates/said-shielded-pool-client/src/: encryption.rs  error.rs  keypair.rs  lib.rs  note.rs  poseidon.rs  prover_client.rs  relayer_client.rs  scan.rs  tx_builder.rs  witness.rs
crates/said-shielded-pool-client/tests/: integration.rs
crates/said-shielded-pool-indexer/: Cargo.toml  README.md
crates/said-shielded-pool-indexer/proptests/: tree_props.proptest-regressions  tree_props.rs
crates/said-shielded-pool-indexer/src/: backfill.rs  config.rs  error.rs  events.rs  lib.rs  listener.rs  main.rs  routes.rs  solana.rs  state.rs  tree.rs  zero_hashes.rs
crates/said-shielded-pool-indexer/tests/: devnet_backfill.rs  tree_insertion.rs
crates/said-shielded-pool-invariants/: Cargo.toml
crates/said-shielded-pool-invariants/src/: checks.rs  lib.rs  model.rs
crates/said-shielded-pool-invariants/tests/: custody.rs  metering.rs  notes.rs  nullifiers.rs  proofs.rs  relayers.rs  revenue.rs  roots.rs
crates/said-shielded-pool-prover/: Cargo.toml  README.md
crates/said-shielded-pool-prover/examples/: gen_proof.rs  gen_vk_rs.rs
crates/said-shielded-pool-prover/src/: config.rs  encoding.rs  error.rs  lib.rs  main.rs  onchain_format.rs  routes.rs  wire.rs  witness.rs
crates/said-shielded-pool-prover/tests/: groth16_forester_verify.rs  groth16_solana_verify.rs  proof_roundtrip.rs
daemon/: Cargo.toml
daemon/src/: discovery.rs  lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: indexer_commitment_hex.rs  merkle_insert.rs  program_args_decode.rs  prover_witness_parse.rs  relayer_relay_payload.rs  vk_parse.rs
integration-tests/: Cargo.toml
integration-tests/examples/: devnet_flow.rs
integration-tests/src/: lib.rs
integration-tests/tests/: circuit_breaker.rs  discovery.rs  spending_policy.rs  x402_flow.rs
mac-dev/: CMakeLists.txt  test_grad.cpp
mcp-server/: Cargo.toml
mcp-server/src/: http.rs  lib.rs  main.rs  solana_lookup.rs
(+1774 files in other folders)
