[workspace]
members = [
    "crates/thumper-types",
    "crates/thumper-relay",
    "crates/thumper-mcp",
    "crates/thumper-cli",
    "crates/thumper-cloud",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
toml = "0.8"
dirs = "6"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-stream = "0.3"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
