[package]
name = "said-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# This crate contains only integration tests and devnet utilities — no library source.
[lib]
path = "src/lib.rs"

[[example]]
name = "devnet_flow"
path = "examples/devnet_flow.rs"

[dependencies]
said-core = { workspace = true }
said-types = { workspace = true }
said-x402 = { path = "../crates/said-x402" }
said-solana = { workspace = true }
bs58 = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
anyhow = "1"
