[package]
name = "chaos-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Failure-mode and chaos test harness for the shielded-pool stack (Stream 6, production-hardening pass). Spins wiremock-backed prover and RPC mocks in-process and exercises the relayer + indexer against pathological backends."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# Async
tokio = { workspace = true, features = ["full", "test-util"] }
async-trait = { workspace = true }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
hyper = "1"

# Mocking
wiremock = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Errors / logging
anyhow = { workspace = true }
tracing = { workspace = true }

# Misc
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
sled = "0.34"

# Crates under test
said-shielded-pool-types = { path = "../said-shielded-pool-types" }
said-shielded-pool-relayer = { path = "../said-shielded-pool-relayer" }
said-shielded-pool-indexer = { path = "../said-shielded-pool-indexer" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros", "rt-multi-thread"] }
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
