[package]
name = "ghola-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ghola-assistant"
path = "src/main.rs"

[dependencies]
ghola-assistant-types = { path = "../ghola-assistant-types" }
ghola-relay = { path = "../ghola-relay" }
ghola-mcp = { path = "../ghola-mcp" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
qrcode = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
open = "5"
uuid = { workspace = true }
