[package]
name = "ghola-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ghola-cloud"
path = "src/main.rs"

[dependencies]
ghola-assistant-types = { path = "../ghola-assistant-types" }
said-envelope.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
base64.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
reqwest.workspace = true
chrono.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
aes-gcm.workspace = true
rand.workspace = true
async-stream.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
ed25519-bip32.workspace = true
bip39.workspace = true
bs58.workspace = true
curve25519-dalek.workspace = true
x25519-dalek.workspace = true
dashmap.workspace = true
hex.workspace = true

[dev-dependencies]
wiremock = "0.6"
