[package]
name = "ghola-home"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ghola-home"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
