[package]
name = "ghola-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ghola_mcp"
path = "src/lib.rs"

[[bin]]
name = "ghola-mcp"
path = "src/main.rs"

[dependencies]
ghola-assistant-types = { path = "../ghola-assistant-types" }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
