[package]
name = "said-bbs-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Schema types for BBS+ anonymous credentials in the sealed-inference path."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
