[package]
name = "said-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "said-cloud"
path = "src/main.rs"

[dependencies]
# Workspace deps
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
rand = { workspace = true }
said-types = { workspace = true }
said-solana = { workspace = true }

# Direct deps (not yet in workspace)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
