[package]
name = "said-pir-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Schema types for private-information-retrieval (PIR) queries over user vaults and external RAG corpora."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
