[package]
name = "said-receipts-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "said-receipts-service"
path = "src/main.rs"

[lib]
name = "said_receipts_service"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
rs_merkle = "1.4"

[dev-dependencies]
tokio = { workspace = true }
